# fast_strstr

./: README.md  fast_strstr.c  fast_strstr.h
benchmark/: Benchmark.hsc  benchmark.cabal
benchmark/algorithms/: naive_strstr.c  naive_strstr.h  volnitsky_strstr.c  volnitsky_strstr.h
